--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MyLoginApp</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">网关登陆</string>
+    <string name="action_settings">设置</string>
+    <string name="switch_on">登陆</string>
+    <string name="switch_off">注销</string>
 
 </resources>
